// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ortto's leaveAudience destination action: all fields 1`] = `
Array [
  Object {
    "anonymous_id": "A[tIDX4",
    "audience_id": "A[tIDX4",
    "enable_batching": true,
    "message_id": "A[tIDX4",
    "user_id": "A[tIDX4",
  },
]
`;

exports[`Testing snapshot for Ortto's leaveAudience destination action: required fields 1`] = `
Array [
  Object {
    "anonymous_id": "A[tIDX4",
    "audience_id": "A[tIDX4",
    "message_id": "A[tIDX4",
    "user_id": "A[tIDX4",
  },
]
`;
